kubernetes/apps/mail/stalwart/app/httproute-erinko.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-erinko
  namespace: mail
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
      sectionName: https-erinko-mail
  hostnames:
    - mail.erinko.fi
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-app
          port: 8080
