kubernetes/apps/mail/stalwart/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-webmail
  namespace: mail
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Mail
      url: "https://webmail.vaderrp.com"
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Mail
    gethomepage.dev/name: Stalwart
    gethomepage.dev/icon: stalwart-mail.png
    gethomepage.dev/href: https://webmail.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=stalwart
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - webmail.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-app
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin
  namespace: mail
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames:
    - stalwart-admin.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart-app
          port: 8080
